fix notification bugs